--- a/avisos.html
+++ b/avisos.html
@@ -3,77 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <title>Avisos — Saúde Bucal Japeri</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="brasil-sorridente-logo222.png?v=2" type="image/png">
-  <style>
-    /* same styles as index (keeps pages visually consistent) */
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap');
-    :root{--bg:#EAF5FF;--panel:#FFFFFF;--line:#DDEAF7;--fg:#0F2740;--muted:#6B87A4;--brand:#0F8BD6;--accent:#1DC56F;--warning:#FFF3B0;--chip:#F3FAFF;--r-sm:8px;--r-md:12px;--r-lg:20px;--shadow:0 8px 24px rgba(16,40,80,0.06);--maxw:1100px}
-    *{box-sizing:border-box}html,body{height:100%}body{margin:0;font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;-webkit-font-smoothing:antialiased;background:linear-gradient(180deg,#fff 0%,var(--bg) 100%);color:var(--fg);padding:12px}
-    .wrap{max-width:var(--maxw);margin:0 auto}
-    .topbar{display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:12px}
-    .header-left{display:flex;align-items:center;gap:12px;min-width:0}
-    .logos{display:flex;gap:10px;align-items:center}
-    .logo-small{height:44px;width:auto;display:block}
-    .site-title{font-weight:800;font-size:15px;line-height:1;max-width:48vw;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
-    .muted.small{font-size:12px;color:var(--muted)}
-    .nav{display:flex;gap:8px;align-items:center}
-    .nav a{padding:8px 10px;border-radius:10px;color:var(--muted);text-decoration:none;font-weight:700}
-    .nav a.active{color:var(--brand);background:rgba(15,139,214,0.06);border-radius:10px}
-    .menu-btn{background:var(--panel);border:1px solid var(--line);padding:8px;border-radius:10px;cursor:pointer;display:flex;gap:5px;align-items:center}
-    .menu-btn .dot{width:6px;height:6px;background:var(--muted);border-radius:50%}
-    .card{background:var(--panel);border-radius:12px;padding:12px;border:1px solid var(--line);box-shadow:var(--shadow);margin-bottom:12px}
-    .sectionTitle{font-weight:800;color:var(--muted);margin:12px 0 8px;font-size:14px}
-    .notice{margin:12px 0;padding:12px;border-radius:12px;background:linear-gradient(90deg,#f8fbff,#fff);border-left:6px solid var(--brand);color:var(--fg);font-weight:700}
-    .footer{display:flex;flex-direction:column;align-items:center;gap:8px;margin:14px 0;color:var(--muted);font-size:13px}
-    .footer img{height:36px}
-    #drawerOverlay{position:fixed;inset:0;background:rgba(0,0,0,0.32);display:none;z-index:90}
-    .side-drawer{position:fixed;right:0;top:0;height:100vh;width:86%;max-width:320px;background:#fff;box-shadow:-12px 0 30px rgba(0,0,0,0.14);transform:translateX(110%);transition:transform .26s ease;z-index:100;padding:16px;overflow:auto;border-left:1px solid rgba(15,139,214,0.06)}
-    .side-drawer.open{transform:translateX(0)}
-    .drawer-item{display:block;padding:10px 12px;border-radius:8px;color:var(--fg);font-weight:800;text-decoration:none}
-    .drawer-item:hover{background:#f0f8ff;color:var(--brand)}
-    a:focus,button:focus,select:focus{outline:3px solid rgba(15,139,214,0.12);outline-offset:2px}
-    @media(min-width:900px){.logo-small{height:56px}.wrap{padding:8px}.side-drawer{right:16px;width:280px;transform:translateX(20px);border-radius:12px}#drawerOverlay{display:none}}
-    .menu-btn:not(:first-of-type){display:none !important}
-  </style>
+... (restante do head e styles) ...
 </head>
 <body>
   <div class="wrap">
-    <header class="topbar">
-      <div class="header-left">
-        <div class="logos">
-          <img src="japeri-logo.png" alt="Japeri" class="logo-small">
-          <img src="brasil-sorridente-logo.png" alt="Brasil Sorridente" class="logo-small">
-        </div>
-        <div>
-          <div class="site-title">Painel de Saúde Bucal — Japeri</div>
-          <div class="muted small">Avisos e comunicados</div>
-        </div>
-      </div>
-
-      <nav class="nav" aria-label="Navegação">
-        <a href="index.html">Início</a>
-        <a href="avisos.html" class="active">Avisos</a>
-        <a href="painel.html">Painel</a>
-      </nav>
-
-      <button id="drawerToggle" class="menu-btn" aria-label="Abrir opções" title="Opções">
-        <span class="dot"></span><span class="dot"></span><span class="dot"></span>
-      </button>
-    </header>
-
-    <main>
-      <section class="card">
-        <h1>Avisos e Comunicados</h1>
-        <div class="avisos-list" id="avisosList">
-          <div class="aviso">
-            <div class="aviso-title">Nenhum aviso cadastrado</div>
-            <div class="muted small">Use esta área futuramente para publicar comunicados.</div>
-          </div>
-        </div>
-      </section>
-    </main>
-
+... (restante do header e main) ...
     <footer class="footer">
       <img src="japeri-logo.png" alt="Japeri">
       <div class="muted">Prefeitura de Japeri — Saúde Bucal</div>
@@ -92,36 +26,43 @@
       <a class="drawer-item" href="painel.html">Painel</a>
       <hr>
       <a class="drawer-item" href="mailto:odontologiajaperi@gmail.com">Contato (e-mail)</a>
-      <a class="drawer-item" href="data.json" download>Baixar data.json</a>
-    </nav>
+      </nav>
   </aside>
 
-  <!-- drawer script -->
   <script>
     (function(){
-      const toggleSelectors = ['#drawerToggle', '.menu-btn', '.drawer-toggle', '.hamburger'];
-      const toggles = Array.from(new Set(toggleSelectors.flatMap(s => Array.from(document.querySelectorAll(s)))));
-      const drawer = document.getElementById('sideDrawer') || document.querySelector('.side-drawer');
-      let overlay = document.getElementById('drawerOverlay') || document.querySelector('.drawer-overlay');
-      if(!overlay){
-        overlay = document.createElement('div'); overlay.id = 'drawerOverlay'; overlay.style.position='fixed'; overlay.style.inset='0'; overlay.style.background='rgba(0,0,0,0.32)'; overlay.style.display='none'; overlay.style.zIndex='90'; document.body.appendChild(overlay);
+      const drawer = document.getElementById("sideDrawer");
+      const drawerToggle = document.getElementById("drawerToggle");
+      const drawerClose = document.getElementById("drawerClose");
+      const overlay = document.getElementById("drawerOverlay");
+
+      function openDrawer() {
+        drawer?.classList.add("open");
+        overlay?.style.setProperty('display', 'block');
+        document.body.style.overflow = 'hidden';
       }
-      const internalClose = Array.from(document.querySelectorAll('#drawerClose, [data-drawer-close], .drawer-close-btn'));
-      if(!drawer || toggles.length === 0) return;
-      drawer.setAttribute('role', drawer.getAttribute('role') || 'dialog');
-      drawer.setAttribute('aria-hidden', drawer.classList.contains('open') ? 'false' : 'true');
-      function setExpanded(exp){ toggles.forEach(t => { try{ t.setAttribute('aria-expanded', exp ? 'true' : 'false'); }catch(e){} }); }
-      function openDrawer(){ drawer.classList.add('open'); drawer.setAttribute('aria-hidden','false'); overlay.style.display='block'; overlay.setAttribute('aria-hidden','false'); document.documentElement.style.overflow='hidden'; document.body.style.overflow='hidden'; setExpanded(true); setTimeout(()=>{ const first = drawer.querySelector('a,button,[tabindex]:not([tabindex="-1"])'); if(first) first.focus(); },220); }
-      function closeDrawer(){ drawer.classList.remove('open'); drawer.setAttribute('aria-hidden','true'); overlay.style.display='none'; overlay.setAttribute('aria-hidden','true'); document.documentElement.style.overflow=''; document.body.style.overflow=''; setExpanded(false); }
-      toggles.forEach(t=>{ if(t._drawerBound) return; t._drawerBound=true; t.style.cursor='pointer'; t.addEventListener('click', e=>{ e.stopPropagation(); if(drawer.classList.contains('open')) closeDrawer(); else openDrawer(); }); });
-      overlay.addEventListener('click', ()=>{ closeDrawer(); });
-      internalClose.forEach(b=>{ if(b._drawerBoundClose) return; b._drawerBoundClose=true; b.addEventListener('click', e=>{ e.stopPropagation(); closeDrawer(); }); });
-      drawer.addEventListener('click', function(e){ const item = e.target.closest('.drawer-item, [data-drawer-item], a, button'); if(!item) return; setTimeout(()=> closeDrawer(), 120); });
-      document.addEventListener('keydown', function(ev){ if(ev.key === 'Escape' && drawer.classList.contains('open')) closeDrawer(); });
-      document.addEventListener('click', function(e){ if(!drawer.classList.contains('open')) return; if(e.target.closest('#sideDrawer') || toggles.some(t => t.contains(e.target) || t === e.target)) return; closeDrawer(); });
-      const hideOtherOverlays = ()=> { Array.from(document.querySelectorAll('.drawer-overlay, #drawerOverlay')).forEach(o=>{ if(o !== overlay) o.style.display = 'none'; }); };
-      const mo = new MutationObserver(()=>{ hideOtherOverlays(); setExpanded(drawer.classList.contains('open')); });
-      mo.observe(drawer, { attributes:true, attributeFilter:['class'] });
+
+      function closeDrawer() {
+        drawer?.classList.remove("open");
+        overlay?.style.setProperty('display', 'none');
+        document.body.style.overflow = '';
+      }
+
+      drawerToggle?.addEventListener("click", openDrawer);
+      drawerClose?.addEventListener("click", closeDrawer);
+      overlay?.addEventListener("click", closeDrawer);
+
+      /* Fechar com tecla ESC */
+      document.addEventListener("keydown", e => {
+        if (e.key === "Escape" && drawer?.classList.contains('open')) closeDrawer();
+      });
+
+      /* Fechar ao clicar em item de navegação */
+      drawer?.addEventListener('click', function(e){
+        const item = e.target.closest('.drawer-item');
+        if(!item) return;
+        setTimeout(()=> closeDrawer(), 120);
+      });
     })();
   </script>
 </body>
